--- a/quotes.qmd
+++ b/quotes.qmd
@@ -8,6 +8,9 @@ title: Quotes
 
 > Let us learn to show our friendship for a man when he is alive and not after he is dead.
 
+### Sarah Kane
+> There's not a drug on earth can make life meaningful.
+
 ### Haruki Murakami
 > Still, being able to feel pain was good, he thought. It's when you can't even feel pain anymore that you're in real trouble.
 
