--- a/references.bib
+++ b/references.bib
@@ -167,6 +167,22 @@
   file = {/Users/jinko/Zotero/storage/5PCAR44R/Frick-Cheng et al. - Iron limitation induces motility in uropathogenic E. coli CFT073 partially through action of LpdA.pdf}
 }
 
+@article{gibsonCreationBacterialCell2010,
+  title = {Creation of a {{Bacterial Cell Controlled}} by a {{Chemically Synthesized Genome}}},
+  author = {Gibson, Daniel G. and Glass, John I. and Lartigue, Carole and Noskov, Vladimir N. and Chuang, Ray-Yuan and Algire, Mikkel A. and Benders, Gwynedd A. and Montague, Michael G. and Ma, Li and Moodie, Monzia M. and Merryman, Chuck and Vashee, Sanjay and Krishnakumar, Radha and {Assad-Garcia}, Nacyra and {Andrews-Pfannkoch}, Cynthia and Denisova, Evgeniya A. and Young, Lei and Qi, Zhi-Qing and {Segall-Shapiro}, Thomas H. and Calvey, Christopher H. and Parmar, Prashanth P. and Hutchison, Clyde A. and Smith, Hamilton O. and Venter, J. Craig},
+  year = {2010},
+  month = jul,
+  journal = {Science},
+  volume = {329},
+  number = {5987},
+  pages = {52--56},
+  publisher = {American Association for the Advancement of Science},
+  doi = {10.1126/science.1190719},
+  urldate = {2025-10-06},
+  abstract = {We report the design, synthesis, and assembly of the 1.08--mega--base pair Mycoplasma mycoides JCVI-syn1.0 genome starting from digitized genome sequence information and its transplantation into a M. capricolum recipient cell to create new M. mycoides cells that are controlled only by the synthetic chromosome. The only DNA in the cells is the designed synthetic DNA sequence, including ``watermark'' sequences and other designed gene deletions and polymorphisms, and mutations acquired during the building process. The new cells have expected phenotypic properties and are capable of continuous self-replication.},
+  file = {/Users/jinko/Zotero/storage/THSZYTGZ/Gibson et al. - 2010 - Creation of a Bacterial Cell Controlled by a Chemically Synthesized Genome.pdf}
+}
+
 @article{greenSignalsResilienceChange2021,
   title = {Signals of Resilience and Change in Tidepool Fish Communities on the {{Pacific}} Coast of {{Vancouver Island}}, {{Canada}}},
   author = {Green, John M. and Dunbrack, Robert L. and Bates, Amanda E.},
@@ -230,6 +246,23 @@
   urldate = {2025-08-02},
   abstract = {In humans, uropathogenic Escherichia coli (UPEC) is the most common etiological agent of uncomplicated urinary tract infections (UTIs). Cranberry extracts have been linked to the prevention of UTIs for over a century; however, a mechanistic understanding of the way in which cranberry derivatives prevent bacterial infection is still lacking. In this study, we used a fliC-lux reporter as well as quantitative reverse transcription-PCR to demonstrate that when UPEC strain CFT073 was grown or exposed to dehydrated, crushed cranberries or to purified cranberry-derived proanthocyanidins (cPACs), expression of the flagellin gene (fliC) was inhibited. In agreement with these results, transmission electron microscopy imaging of bacteria grown in the presence of cranberry materials revealed fewer flagella than those in bacteria grown under control conditions. Furthermore, we showed that swimming and swarming motilities were hindered when bacteria were grown in the presence of the cranberry compounds. Because flagellum-mediated motility has been suggested to enable UPEC to disseminate to the upper urinary tract, we propose that inhibition of flagellum-mediated motility might be a key mechanism by which cPACs prevent UTIs. This is the first report to show that cranberry compounds inhibit UPEC motility via downregulation of the fliC gene. Further studies are required to establish whether these inhibitors play a role in vivo.},
   file = {/Users/jinko/Zotero/storage/GQDCG2WY/Hidalgo et al. - 2011 - Inhibition of Escherichia coli CFT073 fliC Expression and Motility by Cranberry Materials.pdf}
+}
+
+@article{hubalekProtectantsUsedCryopreservation2003,
+  title = {Protectants Used in the Cryopreservation of Microorganisms},
+  author = {Hub{\'a}lek, Zdenek},
+  year = {2003},
+  month = jun,
+  journal = {Cryobiology},
+  volume = {46},
+  number = {3},
+  pages = {205--229},
+  issn = {00112240},
+  doi = {10.1016/S0011-2240(03)00046-4},
+  urldate = {2025-10-03},
+  abstract = {The cryoprotective additives (CPAs) used in the frozen storage of microorganisms (viruses, bacteria, fungi, algae, and protozoa) include a variety of simple and more complex chemical compounds, but only a few of them have been used widely and with satisfactory results: these include dimethylsulfoxide (Me2SO), glycerol, blood serum or serum albumin, skimmed milk, peptone, yeast extract, saccharose, glucose, methanol, polyvinylpyrrolidone (PVP), sorbitol, and malt extract. Pairwise comparisons of the cryoprotective activity of the more common CPAs used in cryomicrobiology, based on published experimental reports, indicate that the most successful CPAs have been Me2SO, methanol, ethylene glycol, propylene glycol, and serum or serum albumin, while glycerol, polyethylene glycol, PVP, and sucrose are less successful, and other sugars, dextran, hydroxyethyl starch, sorbitol, and milk are the least effective. However, diols (as well as some other CPAs) are toxic for many microbes. Me2SO might be regarded as the most universally useful CPA, although certain other CPAs can sometimes yield better recoveries with particular organisms. The best CPA, or combination of CPAs, and the optimum concentration for a particular cryosensitive microorganism has to be determined empirically. This review aims to provide a summary of the main experimental findings with a wide range of additives and organisms. A brief discussion of mechanisms of CPA action is also included.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/ZS8GRHFA/Hubálek - 2003 - Protectants used in the cryopreservation of microorganisms.pdf}
 }
 
 @misc{hwangCdiGMPRequiredSwarming2025,
