--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,26 @@
+@article{advaniStateoftheArtReviewRecurrent2025,
+  title = {State-of-the-{{Art Review}}: {{Recurrent Uncomplicated Urinary Tract Infections}} in {{Women}}},
+  shorttitle = {State-of-the-{{Art Review}}},
+  author = {Advani, Sonali D and Thaden, Joshua T and Perez, Reinaldo and Stair, Sabrina L and Lee, Una J and Siddiqui, Nazema Y},
+  year = 2025,
+  month = mar,
+  journal = {Clinical Infectious Diseases},
+  volume = {80},
+  number = {3},
+  pages = {e31-e42},
+  issn = {1058-4838, 1537-6591},
+  doi = {10.1093/cid/ciae653},
+  urldate = {2025-10-20},
+  abstract = {Abstract             Over 50\% of adult women experience at least 1 urinary tract infection (UTI) in their lifetime, and almost one-quarter of them will experience a recurrent UTI (rUTI). Recurrent UTI is defined as {$\geq$}2 UTIs in a 6-month period or {$\geq$}3 UTIs in 12 months (at least 1 of these episodes should be culture-proven to confirm infectious etiology). In this narrative review, we discuss the epidemiology, pathogenesis, diagnosis, and treatment considerations for recurrent uncomplicated cystitis in the adult female population. We provide a focused overview of the comprehensive management of these patients, with input from infectious disease physicians, urogynecologists, and urologists with expertise in rUTI, highlighting updated recommendations by the Infectious Diseases Society of America, American Urologic Association, Canadian Urologic Association, and American Urogynecologic Society. Finally, given the variety of prevention strategies, different treatment goals, and the need for ``preference sensitive'' decisions, we highlight the need for shared decision-making with patients.},
+  copyright = {https://academic.oup.com/pages/standard-publication-reuse-rights},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/Q7T43KIE/Advani et al. - 2025 - State-of-the-Art Review Recurrent Uncomplicated Urinary Tract Infections in Women.pdf}
+}
+
 @article{bachellerURINARYTRACTINFECTIONS1997,
   title = {{{URINARY TRACT INFECTIONS}}},
   author = {Bacheller, Catherine D. and Bernstein, Jack M.},
-  year = {1997},
+  year = 1997,
   month = may,
   journal = {Medical Clinics of North America},
   volume = {81},
@@ -18,7 +37,7 @@
 @article{bienRoleUropathogenicEscherichia2012,
   title = {Role of {{Uropathogenic Escherichia}} Coli {{Virulence Factors}} in {{Development}} of {{Urinary Tract Infection}} and {{Kidney Damage}}},
   author = {Bien, Justyna and Sokolova, Olga and Bozko, Przemyslaw},
-  year = {2012},
+  year = 2012,
   month = mar,
   journal = {International Journal of Nephrology},
   volume = {2012},
@@ -35,7 +54,7 @@
 @article{bruTimelapseImagingBacterial2020,
   title = {Time-Lapse {{Imaging}} of {{Bacterial Swarms}} and the {{Collective Stress Response}}},
   author = {Bru, Jean-Louis and Siryaporn, Albert and {H{\o}yland-Kroghsbo}, Nina Molin},
-  year = {2020},
+  year = 2020,
   month = may,
   journal = {Journal of Visualized Experiments},
   number = {159},
@@ -51,7 +70,7 @@
 @article{chareyreBacterialIronHomeostasis2018,
   title = {Bacterial {{Iron Homeostasis Regulation}} by {{sRNAs}}},
   author = {Chareyre, Sylvia and Mandin, Pierre},
-  year = {2018},
+  year = 2018,
   month = mar,
   journal = {Microbiology Spectrum},
   volume = {6},
@@ -67,7 +86,7 @@
 @article{conoverEstablishmentCharacterizationUTI2015,
   title = {Establishment and {{Characterization}} of {{UTI}} and {{CAUTI}} in a {{Mouse Model}}},
   author = {Conover, Matt S. and {Flores-Mireles}, Ana L. and Hibbing, Michael E. and Dodson, Karen and Hultgren, Scott J.},
-  year = {2015},
+  year = 2015,
   month = jun,
   journal = {Journal of Visualized Experiments : JoVE},
   number = {100},
@@ -84,7 +103,7 @@
 @article{d.NewMethodExopolysaccharide2001,
   title = {New Method for Exopolysaccharide Determination in Culture Broth Using Stirred Ultrafiltration Cells},
   author = {D., Bergmaier and C., Lacroix and Macedo, M. Guadalupe and C., Champagne},
-  year = {2001},
+  year = 2001,
   month = oct,
   journal = {Applied Microbiology and Biotechnology},
   volume = {57},
@@ -102,7 +121,7 @@
   title = {Commercial {{Lysogeny Broth}} Culture Media and Oxidative Stress: {{A}} Cautious Tale},
   shorttitle = {Commercial {{Lysogeny Broth}} Culture Media and Oxidative Stress},
   author = {Ezraty, Benjamin and Henry, Camille and H{\'e}risse, Marion and Denamur, Erick and Barras, Fr{\'e}d{\'e}ric},
-  year = {2014},
+  year = 2014,
   month = sep,
   journal = {Free Radical Biology and Medicine},
   volume = {74},
@@ -118,7 +137,7 @@
 @article{fitzpatrickStructureMacABTolCABCtype2017,
   title = {Structure of the {{MacAB-TolC ABC-type}} Tripartite Multidrug Efflux Pump},
   author = {Fitzpatrick, Anthony W.P. and Llabr{\'e}s, Salom{\'e} and Neuberger, Arthur and Blaza, James N. and Bai, Xiao-chen and Okada, Ui and Murakami, Satoshi and {van Veen}, Hendrik W. and Zachariae, Ulrich and Scheres, Sjors H.W. and Luisi, Ben F. and Du, Dijun},
-  year = {2017},
+  year = 2017,
   month = may,
   journal = {Nature microbiology},
   volume = {2},
@@ -133,10 +152,44 @@
   file = {/Users/jinko/Zotero/storage/W5VGDYI4/Fitzpatrick et al. - 2017 - Structure of the MacAB-TolC ABC-type tripartite mu.pdf}
 }
 
+@article{flores-mirelesUrinaryTractInfections2015,
+  title = {Urinary Tract Infections: Epidemiology, Mechanisms of Infection and Treatment Options},
+  shorttitle = {Urinary Tract Infections},
+  author = {{Flores-Mireles}, Ana L. and Walker, Jennifer N. and Caparon, Michael and Hultgren, Scott J.},
+  year = 2015,
+  month = may,
+  journal = {Nature Reviews Microbiology},
+  volume = {13},
+  number = {5},
+  pages = {269--284},
+  issn = {1740-1526, 1740-1534},
+  doi = {10.1038/nrmicro3432},
+  urldate = {2025-10-20},
+  langid = {english}
+}
+
+@article{flores-mirelesUrinaryTractInfections2015a,
+  title = {Urinary Tract Infections: Epidemiology, Mechanisms of Infection and Treatment Options},
+  shorttitle = {Urinary Tract Infections},
+  author = {{Flores-Mireles}, Ana L. and Walker, Jennifer N. and Caparon, Michael and Hultgren, Scott J.},
+  year = 2015,
+  month = may,
+  journal = {Nature Reviews Microbiology},
+  volume = {13},
+  number = {5},
+  pages = {269--284},
+  issn = {1740-1526, 1740-1534},
+  doi = {10.1038/nrmicro3432},
+  urldate = {2025-10-20},
+  abstract = {Urinary tract infections (UTIs) are a severe public health problem and are caused by a range of pathogens, but most commonly by Escherichia coli, Klebsiella pneumoniae, Proteus mirabilis, Enterococcus faecalis and Staphylococcus saprophyticus. High recurrence rates and increasing antimicrobial resistance among uropathogens threaten to greatly increase the economic burden of these infections. In this Review, we discuss how basic science studies are elucidating the molecular details of the crosstalk that occurs at the host--pathogen interface, as well as the consequences of these interactions for the pathophysiology of UTIs. We also describe current efforts to translate this knowledge into new clinical treatments for UTIs.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/27SQPA87/Flores-Mireles et al. - 2015 - Urinary tract infections epidemiology, mechanisms of infection and treatment options.pdf}
+}
+
 @misc{frick-chengAlteredMotilityResponse2023,
   title = {Altered Motility in Response to Iron-Limitation Is Regulated by {{lpdA}} in Uropathogenic {{E}}. Coli {{CFT073}}},
   author = {{Frick-Cheng}, A. E. and Shea, A. E. and Roberts, J. R. and Smith, S. N. and Ohi, M. D. and Mobley, H. L. T.},
-  year = {2023},
+  year = 2023,
   month = sep,
   primaryclass = {New Results},
   pages = {2023.09.27.559868},
@@ -170,7 +223,7 @@
 @article{gibsonCreationBacterialCell2010,
   title = {Creation of a {{Bacterial Cell Controlled}} by a {{Chemically Synthesized Genome}}},
   author = {Gibson, Daniel G. and Glass, John I. and Lartigue, Carole and Noskov, Vladimir N. and Chuang, Ray-Yuan and Algire, Mikkel A. and Benders, Gwynedd A. and Montague, Michael G. and Ma, Li and Moodie, Monzia M. and Merryman, Chuck and Vashee, Sanjay and Krishnakumar, Radha and {Assad-Garcia}, Nacyra and {Andrews-Pfannkoch}, Cynthia and Denisova, Evgeniya A. and Young, Lei and Qi, Zhi-Qing and {Segall-Shapiro}, Thomas H. and Calvey, Christopher H. and Parmar, Prashanth P. and Hutchison, Clyde A. and Smith, Hamilton O. and Venter, J. Craig},
-  year = {2010},
+  year = 2010,
   month = jul,
   journal = {Science},
   volume = {329},
@@ -186,7 +239,7 @@
 @article{greenSignalsResilienceChange2021,
   title = {Signals of Resilience and Change in Tidepool Fish Communities on the {{Pacific}} Coast of {{Vancouver Island}}, {{Canada}}},
   author = {Green, John M. and Dunbrack, Robert L. and Bates, Amanda E.},
-  year = {2021},
+  year = 2021,
   journal = {Diversity and Distributions},
   volume = {27},
   number = {11},
@@ -204,7 +257,7 @@
   title = {What's on the {{Outside Matters}}: {{The Role}} of the {{Extracellular Polymeric Substance}} of {{Gram-negative Biofilms}} in {{Evading Host Immunity}} and as a {{Target}} for {{Therapeutic Intervention}}},
   shorttitle = {What's on the {{Outside Matters}}},
   author = {Gunn, John S. and Bakaletz, Lauren O. and Wozniak, Daniel J.},
-  year = {2016},
+  year = 2016,
   month = jun,
   journal = {The Journal of Biological Chemistry},
   volume = {291},
@@ -223,7 +276,7 @@
   title = {Guyton and {{Hall}} Textbook of Medical Physiology},
   shorttitle = {Guyton and {{Hall}} Textbook of Medical Physiology},
   author = {Hall, John E. and Hall, John E. and Guyton, Arthur C.},
-  year = {2011},
+  year = 2011,
   edition = {12. ed},
   publisher = {Saunders, Elsevier},
   address = {Philadelphia, Pa},
@@ -235,7 +288,7 @@
 @article{hidalgoInhibitionEscherichiaColi2011,
   title = {Inhibition of {{Escherichia}} Coli {{CFT073 fliC Expression}} and {{Motility}} by {{Cranberry Materials}}},
   author = {Hidalgo, Gabriela and Chan, Michelle and Tufenkji, Nathalie},
-  year = {2011},
+  year = 2011,
   month = oct,
   journal = {Applied and Environmental Microbiology},
   volume = {77},
@@ -251,7 +304,7 @@
 @article{hubalekProtectantsUsedCryopreservation2003,
   title = {Protectants Used in the Cryopreservation of Microorganisms},
   author = {Hub{\'a}lek, Zdenek},
-  year = {2003},
+  year = 2003,
   month = jun,
   journal = {Cryobiology},
   volume = {46},
@@ -269,7 +322,7 @@
   title = {C-Di-{{GMP}} Is {{Required}} for {{Swarming}} in {{E}}. Coli: A {{Role}} for {{DgcO}} and {{Colanic Acid}}},
   shorttitle = {C-Di-{{GMP}} Is {{Required}} for {{Swarming}} in {{E}}. Coli},
   author = {Hwang, YuneSahng and Perez, Marta and Holzel, Rebecca and Harshey, Rasika M.},
-  year = {2025},
+  year = 2025,
   month = feb,
   doi = {10.1101/2025.01.04.631324},
   urldate = {2025-02-10},
@@ -282,7 +335,7 @@
 @article{inoueGenomeWideScreeningGenes2007,
   title = {Genome-{{Wide Screening}} of {{Genes Required}} for {{Swarming Motility}} in {{Escherichia}} Coli {{K-12}}},
   author = {Inoue, Tetsuyoshi and Shingaki, Ryuji and Hirose, Shotaro and Waki, Kaori and Mori, Hirotada and Fukui, Kazuhiro},
-  year = {2007},
+  year = 2007,
   month = feb,
   journal = {Journal of Bacteriology},
   volume = {189},
@@ -300,7 +353,7 @@
 @article{inoueGenomewideScreeningGenes2007a,
   title = {Genome-Wide Screening of Genes Required for Swarming Motility in {{Escherichia}} Coli {{K-12}}},
   author = {Inoue, Tetsuyoshi and Shingaki, Ryuji and Hirose, Shotaro and Waki, Kaori and Mori, Hirotada and Fukui, Kazuhiro},
-  year = {2007},
+  year = 2007,
   month = feb,
   journal = {Journal of Bacteriology},
   volume = {189},
@@ -320,7 +373,7 @@
   title = {{{AcrAB-TolC}}, a Major Efflux Pump in {{Gram}} Negative Bacteria: Toward Understanding Its Operation Mechanism},
   shorttitle = {{{AcrAB-TolC}}, a Major Efflux Pump in {{Gram}} Negative Bacteria},
   author = {Jang, Soojin},
-  year = {2023},
+  year = 2023,
   month = jun,
   journal = {BMB Reports},
   volume = {56},
@@ -336,7 +389,7 @@
 @article{jonesUltrastructureProteusMirabilis2004,
   title = {Ultrastructure of {{Proteus}} Mirabilis {{Swarmer Cell Rafts}} and {{Role}} of {{Swarming}} in {{Catheter-Associated Urinary Tract Infection}}},
   author = {Jones, Brian V. and Young, Robert and Mahenthiralingam, Eshwar and Stickler, David J.},
-  year = {2004},
+  year = 2004,
   month = jul,
   journal = {Infection and Immunity},
   volume = {72},
@@ -354,7 +407,7 @@
 @article{kearnsFieldGuideBacterial2010,
   title = {A Field Guide to Bacterial Swarming Motility},
   author = {Kearns, Daniel B.},
-  year = {2010},
+  year = 2010,
   month = sep,
   journal = {Nature reviews. Microbiology},
   volume = {8},
@@ -372,7 +425,7 @@
 @article{kobayashiNovelMacrolideSpecificABCType2001,
   title = {Novel {{Macrolide-Specific ABC-Type Efflux Transporter}} in {{Escherichia}} Coli},
   author = {Kobayashi, Nobuyoshi and Nishino, Kunihiko and Yamaguchi, Akihito},
-  year = {2001},
+  year = 2001,
   month = oct,
   journal = {Journal of Bacteriology},
   volume = {183},
@@ -391,7 +444,7 @@
 @book{kumarRobbinsCotranPathologic2021,
   title = {Robbins \& {{Cotran}} Pathologic Basis of Disease},
   editor = {Kumar, Vinay and Abbas, Abul K. and Aster, Jon C. and Turner, Jerrold R. and Perkins, James Alfred and Robbins, Stanley L. and Cotran, Ramzi S.},
-  year = {2021},
+  year = 2021,
   edition = {Tenth edition},
   publisher = {Elsevier},
   address = {Philadelphia, PA},
@@ -403,7 +456,7 @@
 @article{laneRoleMotilityColonization2005,
   title = {Role of {{Motility}} in the {{Colonization}} of {{Uropathogenic Escherichia}} Coli in the {{Urinary Tract}}},
   author = {Lane, M. Chelsea and Lockatell, Virginia and Monterosso, Greta and Lamphier, Daniel and Weinert, Julia and Hebel, J. Richard and Johnson, David E. and Mobley, Harry L. T.},
-  year = {2005},
+  year = 2005,
   month = nov,
   journal = {Infection and Immunity},
   volume = {73},
@@ -421,7 +474,7 @@
 @article{larsenProtonmotiveForceExbB1999,
   title = {Protonmotive Force, {{ExbB}} and Ligand-Bound {{FepA}} Drive Conformational Changes in {{TonB}}},
   author = {Larsen, Ray A. and Thomas, Michael G. and Postle, Kathleen},
-  year = {1999},
+  year = 1999,
   journal = {Molecular Microbiology},
   volume = {31},
   number = {6},
@@ -437,7 +490,7 @@
 @article{lippolisDifferentialGeneExpression2016,
   title = {Differential {{Gene Expression}} of {{Three Mastitis-Causing Escherichia}} Coli {{Strains Grown}} under {{Planktonic}}, {{Swimming}}, and {{Swarming Culture Conditions}}},
   author = {Lippolis, John D. and Brunelle, Brian W. and Reinhardt, Timothy A. and Sacco, Randy E. and Thacker, Tyler C. and Looft, Torey P. and Casey, Thomas A.},
-  year = {2016},
+  year = 2016,
   month = aug,
   journal = {mSystems},
   volume = {1},
@@ -453,7 +506,7 @@
 @article{luMacAPeriplasmicMembrane2013,
   title = {{{MacA}}, a {{Periplasmic Membrane Fusion Protein}} of the {{Macrolide Transporter MacAB-TolC}}, {{Binds Lipopolysaccharide Core Specifically}} and with {{High Affinity}}},
   author = {Lu, Shuo and Zgurskaya, Helen I.},
-  year = {2013},
+  year = 2013,
   month = oct,
   journal = {Journal of Bacteriology},
   volume = {195},
@@ -469,7 +522,7 @@
 @article{lundstedtAssemblyMaintenanceLipids2021,
   title = {Assembly and Maintenance of Lipids at the Bacterial Outer Membrane},
   author = {Lundstedt, Emily and Kahne, Daniel and Ruiz, Natividad},
-  year = {2021},
+  year = 2021,
   month = may,
   journal = {Chemical reviews},
   volume = {121},
@@ -487,7 +540,7 @@
 @article{magasanikGlobalRegulationGene2000,
   title = {Global Regulation of Gene Expression},
   author = {Magasanik, Boris},
-  year = {2000},
+  year = 2000,
   month = dec,
   journal = {Proceedings of the National Academy of Sciences of the United States of America},
   volume = {97},
@@ -504,7 +557,7 @@
   title = {The Multidrug Efflux Pump Regulator {{AcrR}} Directly Represses Motility in {{{\emph{Escherichia}}}}{\emph{ Coli}}},
   author = {Maldonado, Jessica and Czarnecka, Barbara and Harmon, Dana E. and Ruiz, Cristian},
   editor = {Bradford, Patricia A.},
-  year = {2023},
+  year = 2023,
   month = oct,
   journal = {mSphere},
   volume = {8},
@@ -522,7 +575,7 @@
   title = {A Review on Biosurfactants: Properties, Applications and Current Developments},
   shorttitle = {A Review on Biosurfactants},
   author = {Markande, Anoop R. and Patel, Divya and Varjani, Sunita},
-  year = {2021},
+  year = 2021,
   month = jun,
   journal = {Bioresource Technology},
   volume = {330},
@@ -537,7 +590,7 @@
 @article{mchughGlobalIrondependentGene2003,
   title = {Global {{Iron-dependent Gene Regulation}} in {{{\emph{Escherichia}}}}{\emph{ Coli}}},
   author = {McHugh, Jonathan P. and {Rodr{\'i}guez-Qui{\~n}ones}, Francisco and {Abdul-Tehrani}, Hossein and Svistunenko, Dimitri A. and Poole, Robert K. and Cooper, Chris E. and Andrews, Simon C.},
-  year = {2003},
+  year = 2003,
   month = aug,
   journal = {Journal of Biological Chemistry},
   volume = {278},
@@ -550,10 +603,27 @@
   file = {/Users/jinko/Zotero/storage/Y8YJN6UD/McHugh et al. - 2003 - Global Iron-dependent Gene Regulation in Escherichia coli.pdf;/Users/jinko/Zotero/storage/ZN76357F/S0021925820842070.html}
 }
 
+@article{medinaIntroductionEpidemiologyBurden2019,
+  title = {An Introduction to the Epidemiology and Burden of Urinary Tract Infections},
+  author = {Medina, Martha and {Castillo-Pino}, Edgardo},
+  year = 2019,
+  month = may,
+  journal = {Therapeutic Advances in Urology},
+  volume = {11},
+  pages = {1756287219832172},
+  issn = {1756-2872},
+  doi = {10.1177/1756287219832172},
+  urldate = {2025-10-20},
+  abstract = {Urinary tract infections (UTIs) are the most common outpatient infections, with a lifetime incidence of 50-60\% in adult women. This is a narrative review aimed at acting as an introduction to the epidemiology and burden of UTIs. This review is based on relevant literature according to the experience and expertise of the authors. The prevalence of UTI increases with age, and in women aged over 65 is approximately double the rate seen in the female population overall. Etiology in this age group varies by health status with factors such as catheterization affecting the likelihood of infection and the pathogens most likely to be responsible. In younger women, increased sexual activity is a major risk factor for UTIs and recurrence within 6\,months is common. In the female population overall, more serious infections such as pyelonephritis are less frequent but are associated with a significant burden of care due to the risk of hospitalization. Healthcare-associated UTIs (HAUTIs) are the most common form of healthcare-acquired infection. Large global surveys indicate that the nature of pathogens varies between the community and hospital setting. In addition, the pathogens responsible for HAUTIs vary according to region making adequate local data key to infection control. UTIs create a significant societal and personal burden, with a substantial number of medical visits in the United States every year being related to UTIs. European data indicate that recurrent infections are related to increased absenteeism and physician visits. In addition, quality of life measures are significantly impacted in women suffering from recurrent UTIs. Data suggest that nonantimicrobial prophylactic strategies offer an opportunity to reduce both the rate of UTIs and the personal burden experience by patients.},
+  pmcid = {PMC6502976},
+  pmid = {31105774},
+  file = {/Users/jinko/Zotero/storage/K5I3EB23/Medina and Castillo-Pino - 2019 - An introduction to the epidemiology and burden of urinary tract infections.pdf}
+}
+
 @article{miDimethylSulfoxideProtects2016,
   title = {Dimethyl {{Sulfoxide Protects Escherichia}} Coli from {{Rapid Antimicrobial-Mediated Killing}}},
   author = {Mi, Hongfei and Wang, Dai and Xue, Yunxin and Zhang, Zhi and Niu, Jianjun and Hong, Yuzhi and Drlica, Karl and Zhao, Xilin},
-  year = {2016},
+  year = 2016,
   month = jul,
   journal = {Antimicrobial Agents and Chemotherapy},
   volume = {60},
@@ -571,7 +641,7 @@
 @article{nikaidoMechanismsRNDMultidrug2009,
   title = {Mechanisms of {{RND Multidrug Efflux Pumps}}},
   author = {Nikaido, Hiroshi and Takatsuka, Yumiko},
-  year = {2009},
+  year = 2009,
   month = may,
   journal = {Biochimica et biophysica acta},
   volume = {1794},
@@ -591,7 +661,7 @@
   title = {{{TonB-dependent}} Transporters: Regulation, Structure, and Function},
   shorttitle = {{{TonB-dependent}} Transporters},
   author = {Noinaj, Nicholas and Guillier, Maude and Barnard, Travis J. and Buchanan, Susan K.},
-  year = {2010},
+  year = 2010,
   month = oct,
   journal = {Annual review of microbiology},
   volume = {64},
@@ -608,7 +678,7 @@
 @article{obadiaInfluenceTyrosineKinaseWzc2007,
   title = {Influence of {{Tyrosine-Kinase Wzc Activity}} on {{Colanic Acid Production}} in {{Escherichia}} Coli {{K12 Cells}}},
   author = {Obadia, Brice and Lacour, Soline and Doublet, Patricia and {Baubichon-Cortay}, H{\'e}l{\`e}ne and Cozzone, Alain J. and Grangeasse, Christophe},
-  year = {2007},
+  year = 2007,
   month = mar,
   journal = {Journal of Molecular Biology},
   volume = {367},
@@ -622,10 +692,26 @@
   file = {/Users/jinko/Zotero/storage/9I3ALZSJ/Obadia et al. - 2007 - Influence of Tyrosine-Kinase Wzc Activity on Colanic Acid Production in Escherichia coli K12 Cells.pdf}
 }
 
+@article{otooleMicrotiterDishBiofilm2011,
+  title = {Microtiter {{Dish Biofilm Formation Assay}}},
+  author = {O'Toole, George A.},
+  year = 2011,
+  month = jan,
+  journal = {Journal of Visualized Experiments},
+  number = {47},
+  pages = {2437},
+  issn = {1940-087X},
+  doi = {10.3791/2437},
+  urldate = {2025-10-27},
+  abstract = {Biofilms are communities of microbes attached to surfaces, which can be found in medical, industrial and natural settings. In fact, life in a biofilm probably represents the predominate mode of growth for microbes in most environments. Mature biofilms have a few distinct characteristics. Biofilm microbes are typically surrounded by an extracellular matrix that provides structure and protection to the community. Microbes growing in a biofilm also have a characteristic architecture generally comprised of macrocolonies (containing thousands of cells) surrounded by fluid-filled channels. Biofilm-grown microbes are also notorious for their resistance to a range of antimicrobial agents including clinically relevant antibiotics.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/4C5CHBUW/O'Toole - 2011 - Microtiter Dish Biofilm Formation Assay.pdf}
+}
+
 @article{rajapakshaInsightAcrABTolCComplex2021,
   title = {Insight into the {{AcrAB-TolC Complex Assembly Process Learned}} from {{Competition Studies}}},
   author = {Rajapaksha, Prasangi and Ojo, Isoiza and Yang, Ling and Pandeya, Ankit and Abeywansha, Thilini and Wei, Yinan},
-  year = {2021},
+  year = 2021,
   month = jul,
   journal = {Antibiotics},
   volume = {10},
@@ -644,7 +730,7 @@
 @article{rikituterefaCOVID19VaccineUptake2021,
   title = {{{COVID-19 Vaccine Uptake}} and {{Associated Factors Among Health Professionals}} in {{Ethiopia}}},
   author = {Rikitu Terefa, Dufera and Shama, Adisu Tafari and Feyisa, Bikila Regassa and Ewunetu Desisa, Adisu and Geta, Edosa Tesfaye and Chego Cheme, Melese and Tamiru Edosa, Afework},
-  year = {2021},
+  year = 2021,
   month = dec,
   journal = {Infection and Drug Resistance},
   volume = {14},
@@ -662,7 +748,7 @@
   title = {The Iron Hand of Uropathogenic {{Escherichia}} Coli: The Role of Transition Metal Control in Virulence},
   shorttitle = {The Iron Hand of Uropathogenic {{Escherichia}} Coli},
   author = {Robinson, Anne E and Heffernan, James R and Henderson, Jeffrey P},
-  year = {2018},
+  year = 2018,
   month = jun,
   journal = {Future Microbiology},
   volume = {13},
@@ -680,7 +766,7 @@
 @article{sezonovEscherichiaColiPhysiology2007,
   title = {Escherichia Coli {{Physiology}} in {{Luria-Bertani Broth}}},
   author = {Sezonov, Guennadi and {Joseleau-Petit}, Dani{\`e}le and D'Ari, Richard},
-  year = {2007},
+  year = 2007,
   month = dec,
   journal = {Journal of Bacteriology},
   volume = {189},
@@ -697,7 +783,7 @@
   title = {Escherichia Coli Biofilm: Development and Therapeutic Strategies},
   shorttitle = {Escherichia Coli Biofilm},
   author = {Sharma, G. and Sharma, S. and Sharma, P. and Chandola, D. and Dang, S. and Gupta, S. and Gabrani, R.},
-  year = {2016},
+  year = 2016,
   month = aug,
   journal = {Journal of Applied Microbiology},
   volume = {121},
@@ -731,7 +817,7 @@
 @article{shields-cutlerHumanUrinaryComposition2015,
   title = {Human {{Urinary Composition Controls Antibacterial Activity}} of {{Siderocalin}} *\ding{169}},
   author = {{Shields-Cutler}, Robin R. and Crowley, Jan R. and Hung, Chia S. and Stapleton, Ann E. and Aldrich, Courtney C. and Marschall, Jonas and Henderson, Jeffrey P.},
-  year = {2015},
+  year = 2015,
   month = jun,
   journal = {Journal of Biological Chemistry},
   volume = {290},
@@ -750,7 +836,7 @@
 @article{shirshikovaABCTypeEffluxPump2021,
   title = {The {{ABC-Type Efflux Pump MacAB Is Involved}} in {{Protection}} of {{Serratia}} Marcescens against {{Aminoglycoside Antibiotics}}, {{Polymyxins}}, and {{Oxidative Stress}}},
   author = {Shirshikova, Tatiana V. and {Sierra-Bakhshi}, Cecilia G. and Kamaletdinova, Leisan K. and Matrosova, Lilia E. and Khabipova, Nailya N. and Evtugyn, Vladimir G. and Khilyas, Irina V. and Danilova, Iuliia V. and Mardanova, Ayslu M. and Sharipova, Margarita R. and Bogomolnaya, Lydia M.},
-  year = {2021},
+  year = 2021,
   month = mar,
   journal = {mSphere},
   volume = {6},
@@ -779,7 +865,7 @@
   shorttitle = {{{TonB-Dependent Systems}} of {{Uropathogenic}} {{{\emph{Escherichia}}}}{\emph{ Coli}}},
   author = {Torres, Alfredo G. and Redford, Peter and Welch, Rodney A. and Payne, Shelley M.},
   editor = {O'Brien, A. D.},
-  year = {2001},
+  year = 2001,
   month = oct,
   journal = {Infection and Immunity},
   volume = {69},
@@ -797,7 +883,7 @@
 @article{yangSubinhibitoryConcentrationsAllicin2016,
   title = {Subinhibitory {{Concentrations}} of {{Allicin Decrease Uropathogenic Escherichia}} Coli ({{UPEC}}) {{Biofilm Formation}}, {{Adhesion Ability}}, and {{Swimming Motility}}},
   author = {Yang, Xiaolong and Sha, Kaihui and Xu, Guangya and Tian, Hanwen and Wang, Xiaoying and Chen, Shanze and Wang, Yi and Li, Jingyu and Chen, Junli and Huang, Ning},
-  year = {2016},
+  year = 2016,
   month = jul,
   journal = {International Journal of Molecular Sciences},
   volume = {17},
@@ -817,7 +903,7 @@
 @article{zhanCdiGMPSignalingModule2024,
   title = {A C-Di-{{GMP}} Signaling Module Controls Responses to Iron in {{Pseudomonas}} Aeruginosa},
   author = {Zhan, Xueliang and Zhang, Kuo and Wang, Chenchen and Fan, Qiao and Tang, Xiujia and Zhang, Xi and Wang, Ke and Fu, Yang and Liang, Haihua},
-  year = {2024},
+  year = 2024,
   month = feb,
   journal = {Nature Communications},
   volume = {15},
