--- a/books.qmd
+++ b/books.qmd
@@ -7,63 +7,42 @@ Some favorites.
 # Nonfiction
 
 The Basic Laws of Human Stupidity, *Carlo M. Cipolla*  
-ISBN: [9780385546478](https://www.worldcat.org/isbn/9780385546478)
 
 The Selfish Gene, *Richard Dawkins*  
-ISBN: [9780199291151](https://www.worldcat.org/isbn/9780199291151)
 
 The Spirit Catches You and You Fall Down, *Anne Fadiman*  
-ISBN: [9780374533403](https://www.worldcat.org/isbn/9780374533403)
 
 What My Bones Know: A Memoir of Healing from Complex Trauma, *Stephanie Foo*  
-ISBN: [9780593238127](https://www.worldcat.org/isbn/9780593238127)
 
 Being Mortal, *Atul Gawande*  
-ISBN: [9780805095159](https://www.worldcat.org/isbn/9780805095159)
 
 How Doctors Think, *Jerome Groopman*  
-ISBN: [9780618610037](https://www.worldcat.org/isbn/9780618610037)
 
 The Machinery of Life, *David S. Goodsell*  
-ISBN: [9780387849256](https://www.worldcat.org/isbn/9780387849256)
 
 When Breath Becomes Air, *Paul Kalanithi*  
-ISBN: [9780812988406](https://www.worldcat.org/isbn/9780812988406)
-
-The Ghost Map, *Steven Johnson*  
-ISBN: [9781594482694](https://www.worldcat.org/isbn/9781594482694)
 
 I Contain Multitudes: The Microbes Within Us and a Grander View of Life, *Ed Yong*  
-ISBN: [9780062368591](https://www.worldcat.org/isbn/9780062368591)
 
 # Fiction
 
-A Man Called Ove, *Fredrik Backman*  
-  ISBN: [9781476738024](https://www.worldcat.org/isbn/9781476738024)
+A Man Called Ove, *Fredrik Backman*
 
-1Q84, *Haruki Murakami*  
-  ISBN: [9780307593313](https://www.worldcat.org/isbn/9780307593313)
+1Q84, *Haruki Murakami*
 
-Colorless Tsukuru Tazaki and His Years of Pilgrimage, *Haruki Murakami*  
-  ISBN: [9780804170123](https://www.worldcat.org/isbn/9780804170123)
+Colorless Tsukuru Tazaki and His Years of Pilgrimage, *Haruki Murakami*
 
-One More Thing: Stories and Other Stories, *B.J. Novak*  
-  ISBN: [9780385351836](https://www.worldcat.org/isbn/9780385351836)
+1984, *George Orwell*
 
-1984, *George Orwell*  
-  ISBN: [9780451524935](https://www.worldcat.org/isbn/9780451524935)  
+Bel Canto, *Ann Patchett*
 
-Bel Canto, *Ann Patchett*  
-  ISBN: [9780060838720](https://www.worldcat.org/isbn/9780060838720)
+The Catcher in the Rye *J. D. Salinger*
 
-The Catcher in the Rye *J. D. Salinger*  
-  ISBN: [9780316769488](https://www.worldcat.org/isbn/9780316769488)
+Kusamakura, *Natsume Sōseki*
 
-Kusamakura, *Natsume Sōseki*  
-  ISBN: [9780140449869](https://www.worldcat.org/isbn/9780140449869)
+The Death of Ivan Ilyich, *Leo Tolstoy*
 
-A Little Life, *Hanya Yanagihara*  
-  ISBN: [9780385539258](https://www.worldcat.org/isbn/9780385539258)
+A Little Life, *Hanya Yanagihara*
 
 ---
 
