modifications to the books

--- a/books.qmd
+++ b/books.qmd
@@ -28,6 +28,8 @@ I Contain Multitudes: The Microbes Within Us and a Grander View of Life, *Ed Yon
 
 A Man Called Ove, *Fredrik Backman*
 
+The Ones Who Walk Away from Omelas, *Ursula K. Le Guin*
+
 1Q84, *Haruki Murakami*
 
 Colorless Tsukuru Tazaki and His Years of Pilgrimage, *Haruki Murakami*
@@ -36,7 +38,7 @@ Colorless Tsukuru Tazaki and His Years of Pilgrimage, *Haruki Murakami*
 
 Bel Canto, *Ann Patchett*
 
-The Catcher in the Rye *J. D. Salinger*
+The Catcher in the Rye, *J. D. Salinger*
 
 Kusamakura, *Natsume Sōseki*
 
