--- a/quotes.qmd
+++ b/quotes.qmd
@@ -18,6 +18,8 @@ title: Quotes
 
 > If I had remained at home, I would have spent my life waiting for you to get in touch. And a life spent waiting would mean I couldn't think of anything other than you. Of course, I wouldn't mind. Since you were what I wanted in this world, more than anything.
 
+> We each have a special something we can get only at a special time of our life. Like a small flame. A careful, fortunate few cherish that flame, nurture it, hold it as a torch to light their way. But once that flame goes out, it's gone forever.
+
 ### George Orwell
 > In the face of pain there are no heroes.
 
