--- a/quotes.qmd
+++ b/quotes.qmd
@@ -2,6 +2,10 @@
 title: Quotes
 ---
 
+### Fredrik Backman
+> Ove had never been asked how he lived before he met her. But if anyone had asked him, he would have answered that he didn’t.
+
+> She just smiled, said that she loved books more than anything, and started telling him excitedly what each of the ones in her lap was about. And Ove realised that he wanted to hear her talking about the things she loved for the rest of his life.
 
 ### F. Scott Fitzgerald
 > There are only the pursued, the pursuing, the busy and the tired.
